Some more funny message refactoring